--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Time-Dekho</title>
  <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    
     <video id="vid" autoplay muted loop src="video.mp4"></video>
  <nav>
     <div class="name">
